<resources>
    <string name="app_name">Travelmantics</string>
    <string name="str_signin_btntxt">Email sign in </string>
    <string name="str_googlebtn">google sign in </string>
    <string name="str_email_login_btn">Sign up</string>
    <string name="str_edit_email">Email</string>
    <string name="str_email_edit_password">Password</string>
    <string name="str_email_activity_title">Sign In</string>
    <string name="str_btn_login">Sign In</string>
    <string name="str_imgvw_description">Deal image placeholder</string>
    <string name="save_menu">save</string>
    <string name="delete_deal">delete</string>
    <string name="str_btn_select_image">Select Image</string>
    <string name="str_menu_logout">Log out</string>
    <string name="str_edit_title">Title</string>
    <string name="str_edittxt_price">Price</string>
    <string name="str_edit_description">Description</string>

    <!--google sign in-->
    <string name="loading">Loading…</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
</resources>
