<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EmailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/AppToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/id_editxt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/str_edit_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <EditText
        android:id="@+id/id_editxt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_visibility"
        android:ems="10"
        android:hint="@string/str_email_edit_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/id_editxt_email"
        app:layout_constraintStart_toStartOf="@+id/id_editxt_email"
        app:layout_constraintTop_toBottomOf="@+id/id_editxt_email" />

    <Button
        android:id="@+id/id_btn_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="32dp"
        android:text="@string/str_email_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_editxt_password" />

    <Button
        android:id="@+id/id_btn_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/str_btn_login"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_email_signup"
        app:layout_constraintTop_toTopOf="@+id/id_btn_email_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>